--- a/html/main.html
+++ b/html/main.html
@@ -5,12 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <title>入口</title>
+    <title>メイン</title>
 </head>
 <body>
-    <h1>ここから書いていくよー</h1>
-    <button class="login">ログイン</button>
-
-    <script src="/js/index.js"></script>
+    <h1>メインページ</h1>
+    <script src="/js/main.js"></script>
 </body>
 </html>
