--- a/html/list.html
+++ b/html/list.html
@@ -22,7 +22,8 @@
     <button type="button" id="heart_send_button">ハートを送る</button>
 
     <ul id="output"></ul>
-    <div id="clickcount"></div><span>次の総ハートを表示している</span>
+    <div id="clickcount"></div>
+    <button id="move">移動</button>
     <script type="module" src="/js/list.js"></script>
 </body>
 
