--- a/html/main.html
+++ b/html/main.html
@@ -23,10 +23,9 @@
     <div>
         <button type="button" id="register">作業登録</button>
     </div>
-    <button type="button" id="update">更新</button>
 
     <ul id="output"></ul>
-    <div id="clickcount"></div><span>次の総ハートを表示している</span>
+    <div id="clickcount"></div>
 
     <button id="move">移動</button>
 
