--- a/html/main.html
+++ b/html/main.html
@@ -27,7 +27,7 @@
     <ul id="output"></ul>
     <div id="clickcount"></div>
 
-    <button id="move">移動</button>
+    <button id="move">別の人の画面に移動</button>
 
     <script type="module" src="/js/main2.js"></script>
 </body>
