--- a/html/list.html
+++ b/html/list.html
@@ -23,7 +23,7 @@
 
     <ul id="output"></ul>
     <div id="clickcount"></div>
-    <button id="move">移動</button>
+    <button id="move">別の人の画面に移動</button>
     <script type="module" src="/js/list.js"></script>
 </body>
 
